--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boda de Itzel & Javier</title>
+    <title>Boda de Itzel & Javier - 13 de Diciembre 2025</title>
+    <meta name="description" content="Invitación a la boda de Itzel y Javier. Sábado 13 de Diciembre de 2025">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💍</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <style>
         * {
@@ -305,7 +307,12 @@
                     <div class="detail-label">Dirección</div>
                     <div class="detail-value">Calle Alfères Nº. 410, Real Providencia II</div>
                     <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.376763789688!2d-101.6540792!3d21.1373994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbee6bcfdb407%3A0x2452f266008cd5de!2sTemplo%20de%20Nuestra%20Se%C3%B1ora%20Virgen%20de%20Zapopan!5e0!3m2!1ses-419!2smx!4v1760304713043!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.376763789688!2d-101.6540792!3d21.1373994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bbee6bcfdb407%3A0x2452f266008cd5de!2sTemplo%20de%20Nuestra%20Se%C3%B1ora%20Virgen%20de%20Zapopan!5e0!3m2!1ses-419!2smx!4v1760304713043!5m2!1ses-419!2smx"
+                            title="Mapa de ubicación del Templo de Nuestra Señora Virgen de Zapopan"
+                            allowfullscreen=""
+                            loading="lazy">
+                        </iframe>
                     </div>
                 </div>
             </div>
@@ -328,7 +335,12 @@
                     <div class="detail-label">Dirección</div>
                     <div class="detail-value">Calle María Izquierda Nº. 355, Predio San Pablo</div>
                     <div class="map-container">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.6184600322076!2d-101.6485308238801!3d21.167576980516746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bb9333e62ccc5%3A0x2ee7dcfc0617a985!2sC.%20Mar%C3%ADa%20Izquierdo%20355%2C%20col%20predio%2C%20San%20Pablo%2C%2037210%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1760304758184!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.6184600322076!2d-101.6485308238801!3d21.167576980516746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842bb9333e62ccc5%3A0x2ee7dcfc0617a985!2sC.%20Mar%C3%ADa%20Izquierdo%20355%2C%20col%20predio%2C%20San%20Pablo%2C%2037210%20Le%C3%B3n%20de%20los%20Aldama%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1760304758184!5m2!1ses-419!2smx"
+                            title="Mapa de ubicación del Salón los Naranjos II"
+                            allowfullscreen=""
+                            loading="lazy">
+                        </iframe>
                     </div>
                 </div>
             </div>
